# psql-retry

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  flake.nix  psql-retry.cabal
app/: Main.hs
src/: PsqlRetry.hs
test/: this_will_timeout.sql  timeout_setup.sql
